# navexa_ARMv8-A_Library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Skills.md  Zero-To-One.md
Resources/: ARMv8-Library-Project-Guide.md
benchmarks/: bench_sve.cpp
cmake/: toolchain-aarch64.cmake
docs/: ARMv8-Library-Project-Guide.md  Individual-Workflow-Guide.md  Skills.md  design-sve-mathext.md
include/armv8lib/: atomics.h  mathext.h  mte.h  sve.h
include/armv8lib/sme/: gemm.hpp  multivec.hpp  outer_product.hpp  sparse.hpp  types.hpp
include/armv8lib/virt/: virt.hpp
src/atomics/: atomic_ops.cpp
src/mathext/: transcendentals.cpp
src/mte/: bounds_check.cpp  mte_sim.cpp
src/sme/: gemm.cpp  multivec.cpp  outer_product.cpp  sparse.cpp
src/sve/: neon_fallback.cpp  neon_fallback.h  sve_emulation.cpp
tests/: CMakeLists.txt
tests/integration/: test_combined.cpp
tests/unit/: mte_test  test_atomics.cpp  test_gemm.cpp  test_mathext.cpp  test_mte.cpp  test_sme.cpp  test_sve.cpp  test_virt.cpp
